--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,2 @@
-<hello name="{{ name }}"></hello>
-<p>
-  Start editing to see some magic happen :)
-</p>
+<app-red-line-view class="line-view" [points]="redPlotPoints"></app-red-line-view>
+<app-green-line-view class="line-view" [points]="greenPlotPoints"></app-green-line-view>
