--- a/src/app/green-line-view/green-line-view.component.html
+++ b/src/app/green-line-view/green-line-view.component.html
@@ -10,10 +10,10 @@
                   [cdkDragFreeDragPosition]="overlay.currentPosition">
   <!-- This is default ng-content will be rendered in `ng-template #defaultContent`. -->
   <p class="green-default-overlay-item">
-    Example if we provide only default content.
+    Example if we dont provide minimized content, just as an example. No minimize button.
   </p>
 
-  <!-- Here we don't provide minimized content. -->
+  <!-- Here we don't provide minimized content, just as an example. -->
 
 </app-plot-overlay>
 
